--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.16.4",
     "knex": "^0.16.3",
     "node": "^11.9.0",
-    "pg": "^7.8.1"
+    "pg": "^7.8.1",
+    "nodemon": "^1.18.10"
   }
 }
